--- a/EMNLP2014/bibliography.bib
+++ b/EMNLP2014/bibliography.bib
@@ -379,6 +379,13 @@ year = {2003}
  address = {Stroudsburg, PA, USA},
 } 
 
+@inproceedings{Liang2007,
+ author={Percy Liang and Slav Petrov and Michael I. Jordan and Dan Klein},
+ title={The Infinite {PCFG} using Hierarchical Dirichlet Processes},
+ booktitle={Proc. of EMNLP},
+ year=2007,
+}
+
 @inproceedings{Petrov2006,
  author = {Petrov, Slav and Barrett, Leon and Thibaux, Romain and Klein, Dan},
  title = {Learning accurate, compact, and interpretable tree annotation},
@@ -404,6 +411,12 @@ year = {2003}
  publisher = {Association for Computational Linguistics},
  address = {Stroudsburg, PA, USA},
 } 
+
+@inproceedings{Hanneman2013,
+ year=2013,
+ author={Greg Hanneman and Alon Lavie},
+ title={Improving Syntax-Augmented Machine Translation by Coarsening the Label Set},
+ booktitle={Proc. of NAACL}}
 
 @inproceedings{Zollmann2006,
  author = {Zollmann, Andreas and Venugopal, Ashish},
